--- a/Signature/styles.css
+++ b/Signature/styles.css
@@ -7,6 +7,11 @@
   -ms-user-select: none;
   user-select: none;
 }
+img {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
 
 .signature-pad {
   position: absolute;
@@ -14,5 +19,4 @@
   top: 0;
   width:400px;
   height:200px;
-  background-color: white;
 }
